--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <p>If you prefer email communication, you can reach Register2Park at:</p>
 <ul>
   <li>
-    <p><strong>Email:</strong> <a href="mailto:r2parkus@gmail.com">r2parkus@gmail.com</a></p>
+    <p><strong>Email:</strong> r2parkus@gmail.com</p>
   </li>
 </ul>
 <p>This option is ideal for non-urgent questions or when you need to send documents or screenshots.</p>
